--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ node_modules/
 /client/.env.development.local
 /client/.env.test.local
 /client/.env.production.local 
-/config/default.json
+config/*
 
 npm-debug.log*
 yarn-debug.log*
